--- a/team.css
+++ b/team.css
@@ -21,31 +21,126 @@ span.header-team {
     color: black;
 }
 
+#small-text {
+    font-size: 19px;
+
+}
+
+#big-text {
+    font-size: 44px;
+    font-weight: 600;
+}
+
 .items-team {
     margin-top: 45px;
     box-sizing: border-box;
-    display: block;
-
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .column-items-team {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 0 15px;
     justify-content: center;
 }
 
 .item-team {
+    align-content: center;
     display: flex;
+    margin: 0 7px;
+    flex-direction: column;
+    flex-wrap: wrap;
     flex-basis: 100%;
     justify-content: center;
     text-align: center;
-    padding: 0 15px;
+    padding: 15px;
+    border-top: 5px solid rgb(197, 0, 0);
+    border-radius: 7px;
+    box-shadow: rgba(62, 65, 75, 0.1) 0px 6px 12px 0px 0 6px 12px 0 rgba(62, 65, 75, .1);
 }
 
-.item-team#inner {
+#inner {
     display: flex;
-    flex-direction: column;
-    border-top: 5px solid rgb(197, 0, 0);
-    padding: 43px 27px;
+    justify-content: center;
+    margin-top: 30px;
+    /* border-top: 5px solid rgb(197, 0, 0);
+    padding: 43px 27px; */
+}
 
+img#image-item {
+    /* border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%; */
+
+    border-radius: 50%;
+    height: 70px;
+    width: 70px;
+}
+
+.name-of-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+item-team#name-of-item #position #sub-item {
+    display: flex;
+    margin: 20px 0 0;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#name-of-item {
+    font-size: 23px;
+    font-weight: 600;
+}
+
+#position {
+    color: #e93314;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+#sub-item{
+    font-size: 17px;
+    font-weight: 300;
+}
+
+.social-icon-team {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 30px 0 0;
+    justify-content: center;
+}
+
+#icon {
+
+    height: 25px;
+    width: 25px;
+}
+
+@media(max-width:767px) {
+    .column-items-team {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 15px 0;
+        justify-content: center;
+        align-items: center;
+        /* flex-basis: 50%;
+    max-width: 50%; */
+    }
+
+    .items-team {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
