--- a/slick/slick.scss
+++ b/slick/slick.scss
@@ -47,15 +47,15 @@
     margin-left: auto;
     margin-right: auto;
 
-    &:before,
-    &:after {
-        content: "";
-        display: table;
-    }
+    // &:before,
+    // &:after {
+    //     content: "";
+    //     display: table;
+    // }
 
-    &:after {
-        clear: both;
-    }
+    // &:after {
+    //     clear: both;
+    // }
 
     .slick-loading & {
         visibility: hidden;
