--- a/slick/slick.css
+++ b/slick/slick.css
@@ -58,7 +58,7 @@
     margin-left: auto;
     margin-right: auto;
 }
-.slick-track:before,
+/* .slick-track:before,
 .slick-track:after
 {
     display: table;
@@ -68,7 +68,7 @@
 .slick-track:after
 {
     clear: both;
-}
+} */
 .slick-loading .slick-track
 {
     visibility: hidden;
