block What to work with us

--- a/index.css
+++ b/index.css
@@ -24,25 +24,22 @@ body {
     background-color: #e93314;
 }
 
-.block {
-    display: block;
-    padding: 60px 90px;
+.global-section {
+    padding: 120px 0 60px;
+
 }
 
-.inner-header {
-    display: flex;
-    justify-content: center;
+.section-inner {
+    padding: 0 40px;
+    margin: 0 18px;
 }
 
-.content-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    /* line-height: 30.6px; */
-    text-align: center;
+#small-text {
+    font-size: 19px;
+
 }
 
-.section-content {
-    display: block;
-    margin-top: 45px;
+#big-text {
+    font-size: 44px;
+    font-weight: 600;
 }
