--- a/banner-after-menu.css
+++ b/banner-after-menu.css
@@ -5,7 +5,8 @@
     font-size: 17px;
     font-weight: 300;
     padding: 250px 0;
-    background-image: url("//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd28d0a4208ed00223e2b67_optimized_1920.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url(//res2.weblium.site/res/5dcebb6eb2b1b00022337fd8/5dd28d0a4208ed00223e2b67_optimized_1920.webp);
 }
 
 
@@ -14,9 +15,8 @@
     box-sizing: border-box;
     display: block;
     font-weight: 300;
-    max-width: 1200px;
-    /* margin: 0 15px; !!! */
-    padding: 0 24px;
+    padding: 0 40px;
+    margin: 0 18px;
     height: 500px;
     width: 100%;
 }
@@ -90,45 +90,20 @@ span.info-text-subtitle {
     margin: 0 15px;
 }
 
-.button-banner {
-    display: block;
-    font-weight: 300;
+
+
+#two-buttons{
     margin-top: 50px;
 }
 
-.grid-button-banner {
+.style-but-l {
     display: flex;
-    font-weight: 300;
-    justify-content: left;
-}
-
-.grid-inner-button {
-    display: flex;
-    flex-wrap: wrap;
-    font-weight: 300;
-    margin: 0 -15px;
-
-}
-
-.grid-button-item {
-    display: flex;
-    padding: 0 15px;
-}
-
-.item-inner-button {
-    display: flex;
-    flex-basis: 100%;
+    flex: 1 1 767px;
     flex-direction: column;
     text-align: left;
 }
 
-.item-group {
-    display: flex;
-    justify-content: flex-start;
-    text-align: left;
-}
-
-.btns-group-inner {
+.btns-group-inner-l {
     display: block;
     margin: -10px;
     text-align: left;
@@ -166,5 +141,10 @@ button.red-but {
         font-size: 60px;
         line-height: 99px;
 
+    }
+
+    .cont-section-inner {
+        padding: 0 24px;
+        margin: 0;
     }
 }
