--- a/collab.css
+++ b/collab.css
@@ -26,7 +26,7 @@
     text-align: left;
     flex-basis: 100%;
     flex-grow: 1;
-    /* padding: 120px 80px; */
+    padding: 120px 80px;
 }
 
 .collab-item-inner#yellow {
@@ -36,7 +36,7 @@
     text-align: left;
     flex-basis: 100%;
     flex-grow: 1;
-    /* padding: 120px 80px; */
+    padding: 120px 80px;
 }
 
 .icon_panel_collab {
