--- a/who-we-are.css
+++ b/who-we-are.css
@@ -12,8 +12,7 @@
     box-sizing: border-box;
     display: block;
     font-weight: 300;
-    max-width: 1200px;
-    padding: 0 24px;
+    padding: 0 40px;
 }
 
 .who-content {
@@ -26,13 +25,7 @@
     justify-content: center;
 }
 
-@media (max-width: 990px) {
-    .box-who {
-        display: flex;
-        /* flex-wrap: wrap; */
-        justify-content: center;
-    }
-}
+
 
 .box-who-inner {
     display: flex;
@@ -41,30 +34,17 @@
     margin: 0 -15px;
 }
 
-@media(max-width: 767px) {
-    .box-who-inner {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: column;
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-    }
-}
 
 .item-who-top {
     align-items: center;
     box-sizing: border-box;
     display: flex;
-    padding: 0 15px;
+    /* padding: 0 15px; */
     flex-basis: 50%;
     max-width: 50%;
 }
-@media(max-width: 767px){
-    .item-who-top{
-        max-width: 100%;
-    }
-}
+
+
 .box-who-top {
     display: flex;
     flex-direction: column;
@@ -94,43 +74,8 @@ img.inner-pic-who {
     background-color: transparent;
 }
 
-@media (max-width: 767px) {
-    img.inner-pic-who {
-        box-sizing: border-box;
-        max-width: inherit;
-        text-align: left;
-        background-color: transparent;
-    }
-}
-
-@media (max-width: 470px) {
-    img.inner-pic-who {
-        box-sizing: border-box;
-        max-width: inherit;
-        text-align: left;
-        background-color: transparent;
-    }
-}
-
-.item-who-middle {
-    box-sizing: border-box;
-    display: flex;
-    flex-basis: 50%;
-    max-width: 50%;
-    padding: 0 15px;
-    justify-content: flex-end;
-}
-
-@media (max-width: 767px) {
-    .item-who-middle {
-        margin-top: 50px;
-        max-width: 100%;
-    }
-}
-
 .box-who-middle {
     display: flex;
-    /* flex-basis: 100%; */
     flex-direction: column;
     justify-content: center;
     max-width: 100%;
@@ -204,4 +149,62 @@ span.text-subtitle-who {
     background-color: transparent;
     color: #e93314;
     border: 2px solid #e93314;
+}
+
+
+.item-who-middle {
+    box-sizing: border-box;
+    display: flex;
+    flex-basis: 50%;
+    max-width: 50%;
+    /* padding: 0 15px; */
+    justify-content: flex-end;
+}
+
+
+@media (max-width: 470px) {
+    img.inner-pic-who {
+        box-sizing: border-box;
+        max-width: inherit;
+        text-align: left;
+        background-color: transparent;
+    }
+}
+
+@media (max-width: 767px) {
+    .item-who-middle {
+        margin-top: 50px;
+        max-width: 100%;
+    }
+
+    img.inner-pic-who {
+        box-sizing: border-box;
+        max-width: inherit;
+        text-align: left;
+        background-color: transparent;
+    }
+
+    .item-who-top {
+        max-width: 100%;
+    }
+
+    .box-who-inner {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+    }
+
+    .section-who-inner {
+        padding: 0 40px;
+    }
+}
+
+@media (max-width: 990px) {
+    .box-who {
+        display: flex;
+        justify-content: center;
+    }
 }
