--- a/portfolio.css
+++ b/portfolio.css
@@ -84,12 +84,12 @@ span.text-title {
 }
 
 .cards-portfolio {
-    box-sizing:border-box;
+    box-sizing: border-box;
     display: block;
     font-family: "Public Sans",
-    sans-serif;
+        sans-serif;
     margin-top: 45px;
-     justify-content: center;
+    justify-content: center;
 }
 
 .box-cards-portfolio {
@@ -109,21 +109,23 @@ span.text-title {
     display: flex;
     flex-basis: 33.33%;
     justify-content: center;
-    padding: 0 15px;
+    padding: 5px 15px;
     /* text-align: left; */
 }
 
-@media(max-width:991px){
-    .cards-portfolio{
-            max-width: 100%;
+@media(max-width:991px) {
+    .cards-portfolio {
+        max-width: 100%;
     }
-    .item-portfolio-box{
-            display: flex;
-            flex-basis: 50%;
-            flex-direction: column;
-            justify-content: center;
-            max-width: 100%;
-            margin-top: 10px;
+
+    .item-portfolio-box {
+        display: flex;
+        flex-basis: 50%;
+        flex-direction: column;
+        justify-content: center;
+        max-width: 100%;
+        margin-top: 10px;
+        align-items: center;
     }
 }
 
@@ -139,24 +141,28 @@ span.text-title {
 }
 
 picture.image-of-item {
-     display: block;
+    display: block;
     /* min-height: 32px; */
     max-width: 100%;
 }
 
-img.style-image-of-card{
+img.style-image-of-card {
     display: flex;
     max-width: inherit;
     flex-basis: 33.33%;
     justify-content: center;
-    border-radius:5px;
+    border-radius: 5px;
     vertical-align: baseline;
+    
 }
 
-@media(max-width:767px){
-    img.style-image-of-card{
-    max-width: inherit;
+@media(max-width:767px) {
+    img.style-image-of-card {
+        max-width: inherit;
+        height: 202px;
+        width: 303px;
     }
+
     .item-portfolio-box {
         display: flex;
         flex-basis: 100%;
@@ -164,5 +170,6 @@ img.style-image-of-card{
         justify-content: center;
         max-width: 100%;
         margin-top: 20px;
+        align-items:center;
     }
 }
