--- a/carousel.css
+++ b/carousel.css
@@ -15,6 +15,13 @@
     width: 100%;
 }
 
+@media(max-width:767px) {
+.sl-logo {
+    padding: 35px 0;
+}
+}
+
+
 /* .slick-prev:before,
 .slick-next:before {
     color: black;
