--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -63,7 +63,7 @@
     opacity: .25;
 }
 
-.slick-prev:before,
+/* .slick-prev:before,
 .slick-next:before
 {
     font-family: 'slick';
@@ -79,7 +79,7 @@
 
 .slick-prev
 {
-    left: 10px;
+    left: 5px;
 }
 [dir='rtl'] .slick-prev
 {
@@ -93,9 +93,9 @@
 [dir='rtl'] .slick-prev:before
 {
     content: '→';
-}
+} */
 
-.slick-next
+/* .slick-next
 {
     right: 10px;
 }
@@ -111,7 +111,7 @@
 [dir='rtl'] .slick-next:before
 {
     content: '←';
-}
+} */
 
 /* Dots */
 .slick-dotted.slick-slider
@@ -122,7 +122,7 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    bottom: -35px;
 
     display: block;
 
@@ -202,3 +202,9 @@
     opacity: .75;
     color: black;
 }
+
+/* @media(max-width:767px){
+.slick-prev {
+    left: 5px;
+    right: 5px;
+}} */
